--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <img src="assets/team_members/disal.png" alt="Team Member" />
               <div class="social-overlay">
                 <h3 class="team-member-name">Disal Henuka </h3>
-                <a href="#" class="social-btn"
+                <a href="https://www.linkedin.com/in/disal-henuka-109556303/" class="social-btn"
                   ><i class="fab fa-linkedin"></i
                 ></a>
                
